kubernetes/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: liceu-prod-svc
spec:
  selector:
     app: liceu-prod
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
